# se-toolkit-lab-7

./: .dockerignore  .env.bot.example  .env.docker.example  .env.docker.secret.save  .gitignore  .task-notes.md  LAB7-INSTRUCTIONS.md  README.md  VM-UPDATE.md  deploy-task2.sh  docker-compose.yml  final-setup.sh  index.md  pyproject.toml  setup-new-vm.sh
backend/: Dockerfile
backend/app/: etl.py
bot/: .env.bot.example  Dockerfile  PLAN.md  bot.py  config.py  keyboards.py  pyproject.toml  task-2.md  test_api.py
bot/handlers/: __init__.py  base.py  commands  commands.py  core.py  general.py  health.py  help.py  intent.py  intent_router.py  keyboards.py  labs.py  messages.py  natural_language.py  scores.py  start.py  unknown.py
bot/handlers/commands/: __init__.py  basic.py  core.py  data.py
bot/handlers/data/: lms_queries.py
bot/llm/: client.py  router.py  tools.py
bot/services/: __init__.py  api_client.py  health_checker.py  intent_router.py  llm.py  llm_client.py  lms.py  lms_api.py  lms_client.py  telegram_bot.py  tools.py
bot/tests/: test_command_handlers.py
contributing/: configuration.md
contributing/conventions/writing/: lab.md  tasks.md  wiki.md
docs/: DEPLOY.md
instructors/: course.md
lab/setup/: setup-full.md  setup-simple.md
lab/tasks/optional/: task-1.md
lab/tasks/required/: TASK-3-CHANGES.md  task-1.md  task-2.md  task-3.md  task-4.md
scripts/: deploy-bot.sh  update-vm.sh  vm-setup.sh
wiki/: bot.md  dotenv-bot-secret.md  dotenv-docker-secret.md  lab.md  lms-api.md
