[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lms-bot"
version = "0.1.0"
description = "Telegram bot scaffold with test mode"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=20.0",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["handlers*", "services*"]