[project]
name = "MY_BOT_TOOLKIT_bot"
version = "0.1.0"
description = "Telegram bot for SE Toolkit Lab"
requires-python = ">=3.10"
dependencies = ["python-telegram-bot>=20.0", "python-dotenv>=1.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["handlers", "services"]
py-modules = ["bot", "config"]

[tool.setuptools.package-dir]
"" = "."
