[project]
name = "se-toolkit-bot"
version = "0.1.0"
description = "SE Toolkit Telegram Bot"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["handlers", "services"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
